# wow_api_getter

./: Cargo.toml
src/: connected_realm.rs  creatures.rs  error.rs  items.rs  main.rs  wow.rs
src/blizz/: utils.rs
src/connected_realm/: connected_realm.rs
src/creatures/: creature.rs  creatures.rs
src/creatures/api_example/: dragon_search.json
src/error/: base_error.rs
src/oauth/: token.rs
src/wow/: game_data_request.rs  generic.rs
